fix:scroll bug fixed on mobile devices

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,6 @@
 
 *{
     font-family: 'Poppins', sans-serif; 
-    overscroll-behavior-y: none;
     @import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;700&display=swap');
 }
 
